Colaboratory를 통해 생성됨

--- a/nlp10_Text_Mining.ipynb
+++ b/nlp10_Text_Mining.ipynb
@@ -6,7 +6,7 @@
       "name": "nlp10_Text Mining.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMCSW+ybl8z/CCrwcForhNY",
+      "authorship_tag": "ABX9TyPjQJxHA6uSlTjSAsWxazTl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -299,7 +299,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ug2jb00QKI82",
-        "outputId": "954a8cf1-eacf-41ed-ad77-0b95e1795b43"
+        "outputId": "28543f55-f621-4668-bb1e-f462eff85f85"
       },
       "source": [
         "# 문법적 또는 의미적으로 변화하는 단어의 원형을 찾는 방법\r\n",
@@ -307,15 +307,17 @@
         "from nltk.stem import LancasterStemmer\r\n",
         "stemmer = LancasterStemmer()\r\n",
         "print(stemmer.stem('working'), stemmer.stem('works'), stemmer.stem('worked'))\r\n",
-        "print(stemmer.stem('amusing'), stemmer.stem('amuses'), stemmer.stem('amused'))"
+        "print(stemmer.stem('amusing'), stemmer.stem('amuses'), stemmer.stem('amused'))\r\n",
+        "print(stemmer.stem('fancier'), stemmer.stem('fanciest'))"
       ],
-      "execution_count": 11,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "work work work\n",
-            "amus amus amus\n"
+            "amus amus amus\n",
+            "fant fanciest\n"
           ],
           "name": "stdout"
         }
@@ -324,18 +326,70 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kdWI8WGeLCYS"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Eflj0bIXMs0r",
+        "outputId": "c3b0adc9-a3d0-4a78-95f5-65a4b7e2c7ef"
+      },
+      "source": [
+        " import nltk\r\n",
+        " nltk.download('wordnet')"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping corpora/wordnet.zip.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kdWI8WGeLCYS",
+        "outputId": "b9828722-4016-4203-9e51-d6c957c0c881"
       },
       "source": [
         "# Lemmatization(WordNetLemmatizer): 정확한 원형 단어 추출을 위해 단어의 품사를 직접 입력\r\n",
         "from nltk.stem.wordnet import WordNetLemmatizer\r\n",
         "\r\n",
         "lemma = WordNetLemmatizer()\r\n",
-        "print(lemma.stem('working'), lemma.stem('works'), lemma.stem('worked'))\r\n",
-        "print(lemma.stem('amusing'), lemma.stem('amuses'), lemma.stem('amused'))"
+        "print(lemma.lemmatize('working','v'), lemma.lemmatize('works','v'), lemma.lemmatize('worked','v'))\r\n",
+        "print(lemma.lemmatize('amusing','v'), lemma.lemmatize('amuses','v'), lemma.lemmatize('amused','v'))\r\n",
+        "print(lemma.lemmatize('fancier','a'), lemma.lemmatize('fanciest','a'))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "work work work\n",
+            "amuse amuse amuse\n",
+            "fancy fancy\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
