--- a/nlp10_Text_Mining.ipynb
+++ b/nlp10_Text_Mining.ipynb
@@ -6,7 +6,7 @@
       "name": "nlp10_Text Mining.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPjQJxHA6uSlTjSAsWxazTl",
+      "authorship_tag": "ABX9TyPx6jVM00DgmuhYaQPs/uKH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,8 +57,8 @@
         "- 토큰화: 문서에서 문장을 분리하는 문장 토큰화와, 문장에서 단어를 토큰으로 분리하는 단어 토큰화\r\n",
         "- 필터링/스톱워드 제거/철자 수정: 분석에 큰 의미가 없는 단어를 제거\r\n",
         "- Stemming, Lemmatization: 문법적 또는 의미적으로 변화하는 단어의 원형을 찾음\r\n",
-        "  - Stemming은 원형 단어로 변환 시 일반적인 방법을 적용하거나 더 단순화된 방법을 적용\r\n",
-        "  - Lemmatization이 Stemming보다 정교하며 의미론적인 기반에서 단어의 원형을 찾음"
+        "  - Stemming은 원형 단어로 변환 시 일반적인 방법을 적용하거나 더 단순화된 방법을 적용(단어만 입력받아서 원형을 탐색함)\r\n",
+        "  - Lemmatization이 Stemming보다 정교하며 의미론적인 기반에서 단어의 원형을 찾음(단어와 품사를 함께 입력해서 원형을 탐색)"
       ]
     },
     {
@@ -74,7 +74,7 @@
         "import nltk\r\n",
         "nltk.download('punkt')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,7 +118,7 @@
         "print(sentences)\r\n",
         "print(type(sentences), len(sentences))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +148,7 @@
         "print(words)\r\n",
         "print(type(words), len(words))"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,7 +182,7 @@
         "print(word_tokens)\r\n",
         "print(type(word_tokens),len(word_tokens))\r\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,7 +208,7 @@
         "import nltk\r\n",
         "nltk.download('stopwords')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,7 +246,7 @@
         "print(len(nltk.corpus.stopwords.words('english')))\r\n",
         "print(nltk.corpus.stopwords.words('english')[:20])"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,7 +281,7 @@
         "  all_tokens.append(filtered_words)\r\n",
         "print(all_tokens)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,7 +310,7 @@
         "print(stemmer.stem('amusing'), stemmer.stem('amuses'), stemmer.stem('amused'))\r\n",
         "print(stemmer.stem('fancier'), stemmer.stem('fanciest'))"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,7 +336,7 @@
         " import nltk\r\n",
         " nltk.download('wordnet')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -378,7 +378,7 @@
         "print(lemma.lemmatize('amusing','v'), lemma.lemmatize('amuses','v'), lemma.lemmatize('amused','v'))\r\n",
         "print(lemma.lemmatize('fancier','a'), lemma.lemmatize('fanciest','a'))"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,6 +390,174 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WJWlHrx1lanL"
+      },
+      "source": [
+        "GPU vs CPU"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qC647QxEoQaZ",
+        "outputId": "392956ea-ea96-4f56-89a1-55dcf22f7493"
+      },
+      "source": [
+        "import numpy as np\r\n",
+        "num_samples = 100\r\n",
+        "height = 71\r\n",
+        "width = 71\r\n",
+        "num_classes = 100\r\n",
+        "\r\n",
+        "import tensorflow as tf\r\n",
+        "from keras.applications import Xception\r\n",
+        "import datetime\r\n",
+        "start = datetime.datetime.now()\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
+        "model = Xception(weights = None,\r\n",
+        "                input_shape = (height, width, 3),\r\n",
+        "                classes = num_classes)\r\n",
+        "model.compile(loss='categorical_crossentropy',\r\n",
+        "              optimizer = 'rmsprop')\r\n",
+        "x = np.random.random((num_samples, height, width, 3))\r\n",
+        "y = np.random.random((num_samples, num_classes))\r\n",
+        "model.fit(x,y,epochs = 3, batch_size = 16)\r\n",
+        "model.save('my_model.h5')\r\n",
+        "end = datetime.datetime.now()\r\n",
+        "time_delta = end - start"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/3\n",
+            "7/7 [==============================] - 7s 64ms/step - loss: 234.0989\n",
+            "Epoch 2/3\n",
+            "7/7 [==============================] - 0s 49ms/step - loss: 243.7826\n",
+            "Epoch 3/3\n",
+            "7/7 [==============================] - 0s 49ms/step - loss: 245.0283\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lEgOQqVtoQPy",
+        "outputId": "0e65eb4f-ebef-4ec1-88fa-5cb1f3e4bf15"
+      },
+      "source": [
+        "print('걸린 시간:{}초'.format(time_delta.seconds))"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "걸린 시간:9초\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B_ZfAIIJlc3b",
+        "outputId": "ce598fc5-b4e3-4f59-b9d5-be3b45d8ea01"
+      },
+      "source": [
+        "import numpy as np\r\n",
+        "num_samples = 100\r\n",
+        "height = 71\r\n",
+        "width = 71\r\n",
+        "num_classes = 100\r\n",
+        "\r\n",
+        "import tensorflow as tf\r\n",
+        "from keras.applications import Xception\r\n",
+        "import datetime\r\n",
+        "start = datetime.datetime.now()\r\n",
+        "\r\n",
+        "\r\n",
+        "with tf.device('/cpu:0'):\r\n",
+        "  model = Xception(weights = None,\r\n",
+        "                  input_shape = (height, width, 3),\r\n",
+        "                  classes = num_classes)\r\n",
+        "  model.compile(loss='categorical_crossentropy',\r\n",
+        "                optimizer = 'rmsprop')\r\n",
+        "  x = np.random.random((num_samples, height, width, 3))\r\n",
+        "  y = np.random.random((num_samples, num_classes))\r\n",
+        "  model.fit(x,y,epochs = 3, batch_size = 16)\r\n",
+        "  model.save('my_model.h5')\r\n",
+        "end = datetime.datetime.now()\r\n",
+        "time_delta = end - start"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/3\n",
+            "7/7 [==============================] - 17s 1s/step - loss: 231.3479\n",
+            "Epoch 2/3\n",
+            "7/7 [==============================] - 10s 1s/step - loss: 239.0170\n",
+            "Epoch 3/3\n",
+            "7/7 [==============================] - 10s 1s/step - loss: 240.1834\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tXfu5Q-fnFwE",
+        "outputId": "c09d120b-5fd3-4962-a77b-397763701a97"
+      },
+      "source": [
+        "print('걸린 시간:{}초'.format(time_delta.seconds))"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "걸린 시간:38초\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xBWtP9y4niVa"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
